--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,23 @@
         android:gravity="center">
 
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@color/accent_material_dark" />
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:background="@drawable/circle" />
         <cvnhan.android.widget.CircleProgressBar
             android:id="@+id/custom_progressBar"
-            android:layout_width="@dimen/progressBar_dimen"
-            android:layout_height="@dimen/progressBar_dimen"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
             app:progress="50"
             app:progressBarThickness="4dp" />
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/blinkText"
+            android:id="@+id/clocktxt"/>
 
     </FrameLayout>
 
